; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_time.c_sys_getitimer.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_kern_time.c_sys_getitimer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { i32 }
%struct.getitimer_args = type { i32, i32 }
%struct.itimerval = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sys_getitimer(%struct.thread* %0, %struct.getitimer_args* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.thread*, align 8
  %5 = alloca %struct.getitimer_args*, align 8
  %6 = alloca %struct.itimerval, align 4
  %7 = alloca i32, align 4
  store %struct.thread* %0, %struct.thread** %4, align 8
  store %struct.getitimer_args* %1, %struct.getitimer_args** %5, align 8
  %8 = load %struct.thread*, %struct.thread** %4, align 8
  %9 = load %struct.getitimer_args*, %struct.getitimer_args** %5, align 8
  %10 = getelementptr inbounds %struct.getitimer_args, %struct.getitimer_args* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @kern_getitimer(%struct.thread* %8, i32 %11, %struct.itimerval* %6)
  store i32 %12, i32* %7, align 4
  %13 = load i32, i32* %7, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %2
  %16 = load i32, i32* %7, align 4
  store i32 %16, i32* %3, align 4
  br label %22

17:                                               ; preds = %2
  %18 = load %struct.getitimer_args*, %struct.getitimer_args** %5, align 8
  %19 = getelementptr inbounds %struct.getitimer_args, %struct.getitimer_args* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @copyout(%struct.itimerval* %6, i32 %20, i32 4)
  store i32 %21, i32* %3, align 4
  br label %22

22:                                               ; preds = %17, %15
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32 @kern_getitimer(%struct.thread*, i32, %struct.itimerval*) #1

declare dso_local i32 @copyout(%struct.itimerval*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
